--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+.register-form {
+  padding-top: 25px;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
@@ -146,109 +148,4 @@ code {
   margin-top: 8%;
   margin-bottom: -15%;
   color: #495057;
-}
-/*demo home page*/
-/**
-* Template Name: Baker - v4.7.0
-* Template URL: https://bootstrapmade.com/baker-free-onepage-bootstrap-theme/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
-
-/*--------------------------------------------------------------
-# General
---------------------------------------------------------------*/
-
-a {
-  color: #ffc107;
-  text-decoration: none;
-}
-
-a:hover {
-  color: #ffce3a;
-  text-decoration: none;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: "Raleway", sans-serif;
-}
-
-/*--------------------------------------------------------------
-# Hero Section
---------------------------------------------------------------*/
-#hero {
-  width: 100%;
-  height: 80vh;
-  background: url("./assest/img/hero-bg.jpg") top center;
-  background-size: cover;
-  position: relative;
-}
-#hero:before {
-  content: "";
-  background: rgba(45, 53, 69, 0.7);
-  position: absolute;
-  bottom: 0;
-  top: 0;
-  left: 0;
-  right: 0;
-}
-#hero .container {
-  text-align: center;
-  padding-top: 50px;
-}
-@media (max-width: 992px) {
-  #hero .container {
-    padding-top: 0;
-  }
-}
-#hero h1 {
-  margin: 0;
-  font-size: 48px;
-  font-weight: 700;
-  line-height: 56px;
-  color: #fff;
-}
-#hero h2 {
-  color: #eee;
-  margin: 15px 0 0 0;
-  font-size: 22px;
-}
-#hero .btn-get-started {
-  font-family: "Raleway", sans-serif;
-  font-weight: 500;
-  font-size: 15px;
-  letter-spacing: 1px;
-  display: inline-block;
-  padding: 9px 35px;
-  border-radius: 50px;
-  transition: 0.5s;
-  margin-top: 40px;
-  border: 2px solid #ffc107;
-  color: #fff;
-}
-#hero .btn-get-started:hover {
-  background: #ffc107;
-}
-@media (min-width: 1024px) {
-  #hero {
-    background-attachment: fixed;
-  }
-}
-@media (max-width: 768px) {
-  #hero {
-    height: 100vh;
-  }
-  #hero h1 {
-    font-size: 28px;
-    line-height: 36px;
-  }
-  #hero h2 {
-    font-size: 18px;
-    line-height: 24px;
-  }
 }
